git kitty update v6

--- a/tests.yml
+++ b/tests.yml
@@ -1,4 +1,4 @@
 repo_owner: shooroop87
-kittygram_domain: https://londonweek.ru/
-taski_domain: https://berlinweek.ru/
+kittygram_domain: https://berlinweek.ru/
+taski_domain: https://londonweek.ru/
 dockerhub_username: shooroop87
